add_subdirectory(disable_mouse_click_on_screen)
add_subdirectory(draw_resolution_text)
add_subdirectory(get_resolution_registry)
add_subdirectory(set_general_display_width_and_height)
add_subdirectory(set_resolution_from_options_menu)
add_subdirectory(set_resolution_registry)
add_subdirectory(set_screen_shift)
add_subdirectory(set_tile_culling_bound)
add_subdirectory(unload_cel_file_collection)
